Fixes Java 9 compatibility issues.